gospel/tests/negative/t16.mli
val f : x:int -> int -> int
(*@ r = f x y*)

(* ERROR:
   Line 2
   first parameter is named
   add ~ before x in line 2 *)
